# tinysvg

./: LICENSE  README.md  pyproject.toml  setup.py
svg/: style.py  svg.py
tinysvg/: __init__.py
